@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h,v 1.99 2001/06/06 05:17:14 db Exp $
+ * $Id: config.h,v 1.100 2001/06/06 06:56:28 db Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -579,12 +579,12 @@
  *
  */
 
-/* NO_CHANOPS_WHEN_SPLIT
+/* NO_CHANOPS_ON_SPLIT
  * When this is defined, users will not be chanopped on empty channels
  * if there are no servers presently connected to this server
  * opers are not affected. 
  */
-#undef NO_CHANOPS_WHEN_SPLIT
+#undef NO_CHANOPS_ON_SPLIT
 
 /* 
  * NO_JOIN_ON_SPLIT
@@ -984,7 +984,7 @@ error CLIENT_FLOOD undefined.
 
 #define REPORT_DLINE_TO_USER
 
-#if defined(NO_CHANOPS_WHEN_SPLIT) || defined(NO_JOIN_ON_SPLIT)
+#if defined(NO_CHANOPS_ON_SPLIT) || defined(NO_JOIN_ON_SPLIT)
 #define NEED_SPLITCODE
 #endif
 
