@@ -17,7 +17,7 @@
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
  *
- * $Id: s_serv.h,v 1.7 1999/07/29 07:06:49 tomh Exp $
+ * $Id: s_serv.h,v 1.8 1999/07/30 06:48:11 tomh Exp $
  *
  */
 #ifndef INCLUDED_serv_h
@@ -73,9 +73,8 @@ extern int MaxConnectionCount; /* GLOBAL - highest number of connections */
  * the network before allowing chanops new channels,
  *  but allow it to be set to a maximum of MAX_SERVER_SPLIT_RECOVERY_TIME 
  */
-#if defined(NO_CHANOPS_WHEN_SPLIT) || defined(PRESERVE_CHANNEL_ON_SPLIT) || \
-        defined(NO_JOIN_ON_SPLIT) || defined(NO_JOIN_ON_SPLIT_SIMPLE)
-#define MAX_SERVER_SPLIT_RECOVERY_TIME 30
+#if defined(NO_CHANOPS_ON_SPLIT) || defined(NO_JOIN_ON_SPLIT)
+#define MAX_SERVER_SPLIT_RECOVERY_TIME 45 
 #ifndef DEFAULT_SERVER_SPLIT_RECOVERY_TIME
 #define DEFAULT_SERVER_SPLIT_RECOVERY_TIME 15
 #endif /* DEFAULT_SERVER_SPLIT_RECOVERY_TIME */
